# RouteGuide

./: .gitignore  README.md
RouteGuideFrontend/: .gitignore  CMakeLists.txt
RouteGuideFrontend/include/model/: UserModel.h
RouteGuideFrontend/qml/: Constants.qml  login.qml  main.qml  register.qml
RouteGuideFrontend/qml/authentification/: login.qml  register_big_screen.qml  register_form.qml  register_little_screen0.qml
RouteGuideFrontend/qml/route_guide/: bottom_navigation.qml  map.qml
RouteGuideFrontend/res/: .qrc  login.qml  qtquickcontrols2.conf
RouteGuideFrontend/src/: main.cpp
RouteGuideFrontend/src/map_controls/: QLocationSearch.cpp
RouteGuideFrontend/src/model/: UserModel.cpp
RouteGuideFrontend/src/navigation/: NavigationManager.cpp
backend/: README.md
frontend/: .gitignore  CMakeLists.txt  README.md  Readme.md  RouteGuide.desktop  frontend.qrc  frontend_qmltyperegistrations.cpp  main.cpp  qtquickcontrols2.conf  route-guide.desktop
frontend-refactor/: .gitignore  CMakeLists.txt  main.cpp  routeguide.qrc
frontend-refactor/include/ressource/: AbstractRessource.h
frontend-refactor/include/utility/: ScreenInfo.h
frontend-refactor/modules/: CMakeLists.txt
frontend-refactor/modules/Models/: CMakeLists.txt
frontend-refactor/modules/Models/UserModel/: CMakeLists.txt  UserModel.cpp  UserModel.h
frontend-refactor/modules/NetworkRessource/: CMakeLists.txt
frontend-refactor/modules/NetworkRessource/AbstractRessource/: AbstractRessource.cpp  AbstractRessource.h  CMakeLists.txt
frontend-refactor/modules/ValidationTextfield/: CMakeLists.txt  ValidationTextfield.qml  ValidationTextfieldModel.cpp  main.cpp  tst_validationTextfield.qml
frontend-refactor/qml/: RootInfromation.ui.qml  RouteGuideFlow.qml  RouteGuideFlowForm.ui.qml  main.qml
frontend-refactor/qml/auth/: Login.qml  LoginForm.ui.qml
frontend-refactor/src/ressource/: AbstractRessource.cpp
frontend-refactor/src/utility/: ScreenInfo.cpp
frontend-refactor/tests/unit/: CMakeLists.txt  setup.cpp
frontend/android/: AndroidManifest.xml
frontend/include/: Constants.h
frontend/include/connections/: AbstractResource.h  GeoPositionRessource.h  LocationResource.h  NominatimRessource.h  ResponseType.h  RouteResource.h  UserApiConnection.h
frontend/include/custom_controls/: ValidationTextfieldModel.h
frontend/include/group/: Group.h
frontend/include/listview/: PlanARouteItem.h
frontend/include/map_control/: QLocationSearch.h
frontend/include/model/: UserModel.h
frontend/include/models/: AbstractModel.h  AbstractModelManager.h  UserModel.h
frontend/include/models/map_control/: RoutingModel.h
frontend/include/models/plan_a_route/: PlanARouteHouseNumberModel.h  PlanARouteModel.h  PlanARouteModelItem.h  WaypointModel.h
frontend/include/models/routing/: GeoPostionMockResource.h  RoutingManager.h  RoutingModel.h
frontend/include/models/waypoint/: WaypointModel.h  WaypointModelItem.h  WaypointModelManager.h
frontend/include/navigation/: NavigationManager.h
frontend/include/sqlite/: SqliteDatabase.h
frontend/js/: Formatter.js
frontend/modules/: CMakeLists.txt
frontend/modules/Models/UserModel/: CMakeLists.txt  UserModel.cpp  UserModel.h  test_usermodel.cpp  test_usermodel.h
frontend/modules/NetworkRessource/: CMakeLists.txt
frontend/modules/NetworkRessource/AbstractRessource/: AbstractRessource.h  CMakeLists.txt
frontend/modules/NetworkRessource/RouteApiRessource/: CMakeLists.txt  RouteApiRessource.cpp  RouteApiRessource.h  test_routeapiressource.cpp  test_routeapiressource.h
frontend/modules/Utility/: CMakeLists.txt
frontend/modules/Utility/ScreenInfo/: CMakeLists.txt  screeninfo.cpp  screeninfo.h
frontend/modules/ValidationTextfield/: CMakeCache.txt  CMakeLists.txt  ValidationTextfield.qml  ValidationTextfieldForm.ui.qml  ValidationTextfieldModel.cpp  ValidationTextfieldModel.h  qmldir  setup.cpp  tst_validationTextfield.qml
frontend/modules/ValidationTextfield/example/: example.cpp  example.qml
frontend/modules/ValidationTextfield/tst/: CMakeLists.txt  tst_ValidationTextfield.qml
frontend/modules/customControls/ValidationTextfield/: CMakeLists.txt
frontend/modules/models/AbstractResource/: CMakeLists.txt
frontend/modules/models/UserModel/: CMakeLists.txt
frontend/qml/: ApplicationFlow.qml  main.qml
frontend/qml/authentification/: Login.qml  LoginForm.ui.qml  ValidationTextField.qml  login.qml  register_big_screen.qml  register_form_small_1.qml  register_little_screen0.qml  register_little_screen1.qml
frontend/qml/authentification/register/: RegisterFormBig.qml  RegisterFormSmall0.qml  RegisterFormSmall1.qml
frontend/qml/controls/: ValidationTextField.qml
frontend/qml/custom_controls/: ValidationTextfield.qml
frontend/qml/dialogs/: LocationDialog.qml  WaypointDialog.qml
frontend/qml/group/: SavedRoutes.qml  SavedRoutesFlickable.qml  SavedRoutesForm.ui.qml
frontend/qml/map/: DefaultMap.qml  DefaultMapPlugin.qml  RouteGuideMap.qml  RouteGuideMapPlugin.qml  RouteGuideRoutingModel.qml  SaveARoute.qml
frontend/qml/navigation/: BlueRoute.qml  DefaultRouteModel.qml  MarkerRepeater.qml  NaviLocationPermission.qml  Navigation.qml  PreviewManeuverList.qml  helper.js
frontend/qml/profil/: UserProfil.qml  UserProfilForm.ui.qml
frontend/qml/route_guide/: Profile.qml  map.qml
frontend/qml/routeguide/: PlanARoute.qml  RouteGuide.qml  RoutingMap.qml
frontend/routeguide/: qmldir
frontend/routeguide/qml/: main.qml
frontend/src/: main.cpp
frontend/src/connections/: GeoPositionRessource.cpp  LocationResource.cpp  NominatimRessource.cpp  RouteResource.cpp  UserApiConnection.cpp
frontend/src/custom_controls/: ValidationTexfieldModel.cpp
frontend/src/listview/: PlanARouteItem.cpp
frontend/src/map_control/: QLocationSearch.cpp
frontend/src/model/: UserModel.cpp
frontend/src/models/: AbstractModelManager.cpp  UserModel.cpp
frontend/src/sqlite/: SqliteDatabase.cpp
frontend/tests/: tst_tst_login.qml
frontend/tests/integration/: CMakeLists.txt
frontend/tests/unit/: CMakeLists.txt  main.cpp  tst_validationTextfield.qml
(+904 files in other folders)
